--- a/showscore/templates/index.html
+++ b/showscore/templates/index.html
@@ -19,7 +19,7 @@
     <tr >
         <td align="center">{{ a.score }}</td>
         <td  align="center">{{ a.count }}</td>
-        <td  align="center">{{ a.title }}</td>
+        <td  align="center"><a href="https://bangumi.bilibili.com/anime/{{a.bangumi_id}}">{{ a.title }}</a></td>
         <td >{{ a.brief }}</td>
         <td  align="center">{{ a.play_count }}</td>
         <td  align="center">{{ a.pub_time }}</td>
