--- a/showscore/templates/index.html
+++ b/showscore/templates/index.html
@@ -13,7 +13,6 @@
     </tr>
     </thead>
     <tbody>
-
     {% for a in anime %}
 
     <tr >
@@ -25,11 +24,19 @@
         <td  align="center">{{ a.pub_time }}</td>
     </tr>
 
-
     {% endfor %}
 
     </tbody>
-</table>
 
+</table>
+    <p>
+  {% for page_number in anime.paginator.page_range %}
+    {% ifequal page_number  anime.number %}
+      {{ page_number }}
+    {% else %}
+      <a href="?page={{ page_number }}">{{ page_number }}</a>
+    {% endifequal %}
+  {% endfor %}
+</p>
 </body>
 {% endblock %}
